--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(aggregate_output)
 export(create_grid)
 export(create_points)
 export(extract_preds)
+export(extract_priors)
 export(get_dow)
 export(hotspots)
 export(lgcp_fit)
@@ -14,4 +15,9 @@ export(scale_conversion_factor)
 import(Rcpp)
 import(methods)
 importFrom(rstan,sampling)
+importFrom(stats,model.matrix)
+importFrom(stats,sd)
+importFrom(stats,weighted.mean)
+importFrom(utils,capture.output)
+importFrom(utils,stack)
 useDynLib(rts2, .registration = TRUE)
