Resolve CRAN check notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ export(create_points)
 export(grid)
 export(progress_bar)
 import(Rcpp)
+import(lubridate)
 import(methods)
 importFrom(R6,R6Class)
+importFrom(RcppParallel,RcppParallelLibs)
 importFrom(rstan,sampling)
+importFrom(rstantools,rstan_config)
 importFrom(stats,model.matrix)
 importFrom(stats,sd)
 importFrom(stats,weighted.mean)
