--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rts2
 Title: Real-Time Disease Surveillance
-Version: 0.4
-Authors@R: 
+Version: 0.4.1
+Authors@R:
     person(given = "Sam",
            family = "Watson",
            role = c("aut", "cre"),
@@ -9,21 +9,21 @@ Authors@R:
            comment = c(ORCID = "0000-0002-8972-769X"))
 Description: Supports modelling real-time case data to facilitate the real-time
     surveillance of infectious disease. A simple grid class structure is provided to generate a computational grid over
-    an area of interest with methods to map covariates between geographies. An approximate log-Gaussian Cox Process 
+    an area of interest with methods to map covariates between geographies. An approximate log-Gaussian Cox Process
     model is fit using 'rstan' or 'cmdstanr' and provides output and analysis as 'sf' objects for simple visualisation.
-    'cmdstanr' can be downloaded at <https://mc-stan.org/cmdstanr/>. Log-Gaussian Cox Processes are described by 
-    Diggle et al. (2013) <doi:10.1214/13-STS441> and we provide both the low-rank approximation  for Gaussian processes 
+    'cmdstanr' can be downloaded at <https://mc-stan.org/cmdstanr/>. Log-Gaussian Cox Processes are described by
+    Diggle et al. (2013) <doi:10.1214/13-STS441> and we provide both the low-rank approximation  for Gaussian processes
     described by Solin and Särkkä (2020) <doi:10.1007/s11222-019-09886-w> and Riutort-Mayol et al (2020) <arXiv:2004.11408> and the
     nearest neighbour Gaussian process described by Datta et al (2016) <doi:10.1080/01621459.2015.1044091>.
-License: CC BY-SA 4.0 
+License: CC BY-SA 4.0
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Biarch: true
-Depends: 
+Depends:
     R (>= 3.4.0)
-Imports: 
+Imports:
     methods,
     R6,
     Rcpp (>= 0.12.0),
@@ -35,7 +35,7 @@ Imports:
 Suggests:
     cmdstanr (>= 0.4.0),
     testthat
-LinkingTo: 
+LinkingTo:
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
     RcppEigen (>= 0.3.3.3.0),
@@ -44,3 +44,5 @@ LinkingTo:
     StanHeaders (>= 2.18.0)
 SystemRequirements: GNU make
 URL: http://www.sam-watson.xyz/vignette.html
+Additional_repositories:
+    https://mc-stan.org/r-packages/
