--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(create_points)
 export(grid)
 export(progress_bar)
 export(sample_u)
+S3method(print,mcmlrts)
+S3method(summary,mcmlrts)
 import(Rcpp)
 import(lubridate)
 import(methods)
