--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rts2
 Title: Real-Time Disease Surveillance
 Version: 0.6.1
-Date: 2024-01-04
+Date: 2024-01-23
 Authors@R: 
     person(given = "Sam",
            family = "Watson",
@@ -9,11 +9,10 @@ Authors@R:
            email = "s.i.watson@bham.ac.uk",
            comment = c(ORCID = "0000-0002-8972-769X"))
 Description: Supports modelling real-time case data to facilitate the real-time
-    surveillance of infectious disease. A simple grid class structure is provided to generate a computational grid over
-    an area of interest with methods to map covariates between geographies. An approximate log-Gaussian Cox Process 
-    model is fit using 'rstan' or 'cmdstanr' and provides output and analysis as 'sf' objects for simple visualisation.
-    'cmdstanr' can be downloaded at <https://mc-stan.org/cmdstanr/>. Log-Gaussian Cox Processes are described by 
-    Diggle et al. (2013) <doi:10.1214/13-STS441> and we provide both the low-rank approximation  for Gaussian processes 
+    surveillance of infectious diseases and other point phenomena. The package provides automated computational grid generation over
+    an area of interest with methods to map covariates between geographies, model fitting including spatially aggregated case counts, 
+    and predictions and visualisation. Both Bayesian and maximum likelihood methods are provided. Log-Gaussian Cox Processes are described by 
+    Diggle et al. (2013) <doi:10.1214/13-STS441> and we provide both the low-rank approximation for Gaussian processes 
     described by Solin and Särkkä (2020) <doi:10.1007/s11222-019-09886-w> and Riutort-Mayol et al (2020) <arXiv:2004.11408> and the
     nearest neighbour Gaussian process described by Datta et al (2016) <doi:10.1080/01621459.2015.1044091>.
 License: CC BY-SA 4.0 
