--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rts2
 Title: Real-Time Disease Surveillance
-Version: 0.6.1
-Date: 2024-01-23
+Version: 0.7.1
+Date: 2024-02-21
 Authors@R: 
     person(given = "Sam",
            family = "Watson",
@@ -14,7 +14,7 @@ Description: Supports modelling real-time case data to facilitate the real-time
     and predictions and visualisation. Both Bayesian and maximum likelihood methods are provided. Log-Gaussian Cox Processes are described by 
     Diggle et al. (2013) <doi:10.1214/13-STS441> and we provide both the low-rank approximation for Gaussian processes 
     described by Solin and Särkkä (2020) <doi:10.1007/s11222-019-09886-w> and Riutort-Mayol et al (2020) <arXiv:2004.11408> and the
-    nearest neighbour Gaussian process described by Datta et al (2016) <doi:10.1080/01621459.2015.1044091>.
+    nearest neighbour Gaussian process described by Datta et al (2016) <doi:10.1080/01621459.2015.1044091>. 'cmdstanr' can be downloaded at <https://mc-stan.org/cmdstanr/>.
 License: CC BY-SA 4.0 
 Encoding: UTF-8
 LazyData: true
@@ -42,6 +42,6 @@ LinkingTo:
     RcppParallel (>= 5.0.1),
     rstan (>= 2.26.0),
     StanHeaders (>= 2.32.0),
-    glmmrBase (>= 0.6.1),
+    glmmrBase (>= 0.7.1),
     SparseChol (>= 0.2.2)
 SystemRequirements: GNU make
