--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,20 @@
-S3method(coef,rtsFit)
-S3method(logLik,rtsFit)
 S3method(print,rtsFit)
 S3method(print,rtsFitSummary)
 S3method(summary,rtsFit)
+S3method(coef,rtsFit)
+S3method(logLik,rtsFit)
+S3method(family,rtsFit)
+S3method(formula,rtsFit)
+S3method(vcov,rtsFit)
+S3method(fitted,rtsFit)
+S3method(residuals,rtsFit)
+S3method(predict,rtsFit)
+S3method(summary,grid)
+S3method(family,grid)
+S3method(predict,grid)
+S3method(residuals,grid)
+S3method(vcov,grid)
+S3method(formula,grid)
 export(covariance.parameters)
 export(create_points)
 export(fixed.effects)
@@ -22,4 +34,7 @@ importFrom(stats,sd)
 importFrom(stats,weighted.mean)
 importFrom(utils,capture.output)
 importFrom(utils,stack)
+importFrom("stats", "as.formula", "formula", "residuals", "vcov")
+importFrom(stats,family)
+importFrom("utils", "head")
 useDynLib(rts2, .registration = TRUE)
