--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rts2
 Title: Real-Time Disease Surveillance
 Version: 0.7.5
-Date: 2024-06-20
+Date: 2024-06-24
 Authors@R: 
     person(given = "Sam",
            family = "Watson",
@@ -13,7 +13,7 @@ Description: Supports modelling real-time case data to facilitate the real-time
     an area of interest with methods to map covariates between geographies, model fitting including spatially aggregated case counts, 
     and predictions and visualisation. Both Bayesian and maximum likelihood methods are provided. Log-Gaussian Cox Processes are described by 
     Diggle et al. (2013) <doi:10.1214/13-STS441> and we provide both the low-rank approximation for Gaussian processes 
-    described by Solin and Särkkä (2020) <doi:10.1007/s11222-019-09886-w> and Riutort-Mayol et al (2020) <arXiv:2004.11408> and the
+    described by Solin and Särkkä (2020) <doi:10.1007/s11222-019-09886-w> and Riutort-Mayol et al (2023) <doi:10.1007/s11222-022-10167-2> and the
     nearest neighbour Gaussian process described by Datta et al (2016) <doi:10.1080/01621459.2015.1044091>. 'cmdstanr' can be downloaded at <https://mc-stan.org/cmdstanr/>.
 License: CC BY-SA 4.0 
 Encoding: UTF-8
