--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rts2
 Title: Real-Time Disease Surveillance
-Version: 0.7.7
-Date: 2024-12-08
+Version: 0.8.0
+Date: 2025-06-06
 Authors@R: 
     person(given = "Sam",
            family = "Watson",
@@ -31,7 +31,9 @@ Imports:
     RcppParallel (>= 5.0.1),
     rstan (>= 2.26.0),
     rstantools (>= 2.1.1),
-    lubridate
+    lubridate (>= 1.9.0),
+    stars (>= 0.6-1),
+    raster (>= 3.6-1)
 Suggests:
     cmdstanr (>= 0.4.0),
     testthat
