--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,4 +37,7 @@ importFrom(utils,stack)
 importFrom("stats", "as.formula", "formula", "residuals", "vcov")
 importFrom(stats,family)
 importFrom("utils", "head")
+importFrom(stars,read_stars)
+importFrom(raster, raster)
+importFrom(raster, writeRaster)
 useDynLib(rts2, .registration = TRUE)
